--- a/vignettes/RERconvergeAnalysisFullWalkthrough.Rmd
+++ b/vignettes/RERconvergeAnalysisFullWalkthrough.Rmd
@@ -90,6 +90,10 @@ Here is the basic method, with the recommended settings:
 
 ```{r, message = FALSE, cache = TRUE}
 #Need to call data() prior to this step to load AdultWeightLog
+data(verbose=F)
+if(!exists('AdultWeightLog')) {
+  load(paste(rerpath,'/data/logAdultWeightcm.RData',sep=''))
+}
 mamRERw=RERconverge::getAllResiduals(mamTrees,useSpecies=names(AdultWeightLog), 
                            transform = "sqrt", weighted = T, scale = T)
 ```
@@ -102,14 +106,20 @@ Now that we have RERs, we can visualize these for any given gene using the `plot
 #make average and gene tree plots
 noneutherians <- c("Platypus","Wallaby","Tasmanian_devil","Opossum")
 par(mfrow=c(1,2))
-#The following function is not in the compiled R package but is available in 'plottingFuncs.R' on the 'UpdateVignette' branch....
-repopath = "~/repos/RERconverge" #modify this to the location of the repo
-source(paste(repopath,"/R/plottingFuncs.R", sep=""))
+#The following function is not in the compiled R package but is available in 'plottingFuncs.R' and separately in 'plotTreeHighlightBranches.R' on the 'UpdateVignette' branch....
+if (!exists('plotTreeHighlightBranches')) {
+  repopath = "~/repos/RERconverge" #modify this to the location of the repo
+  source(paste(repopath,"/R/plotTreeHighlightBranches.R", sep=""))
+}
 avgtree=plotTreeHighlightBranches(mamTrees$masterTree, outgroup=noneutherians, hlspecies=c("Vole","Squirrel"), hlcols=c("blue","red"), main="Average tree") #plot average tree
 bend3tree=plotTreeHighlightBranches(mamTrees$trees$BEND3, outgroup=noneutherians, hlspecies=c("Vole","Squirrel"), hlcols=c("blue","red"), main="BEND3 tree") #plot individual gene tree
 #plot RERs
 par(mfrow=c(1,1))
 phenvExample <- foreground2Paths(c("Vole","Squirrel"),mamTrees)
+if (!exists('plotRers')) {
+  repopath = "~/repos/RERconverge" #modify this to the location of the repo
+  source(paste(repopath,"/R/plottingFuncs.R", sep=""))
+}
 plotRers(mamRERw,"BEND3",phenv=phenvExample) #plot RERs
 ```
 
@@ -123,7 +133,7 @@ Here we describe the minimal set of steps to test for association between relati
 
 Now we will associate variation in these RERs with variation in a binary trait across the tree. To do so, we first need to provide information about which branches of the tree have the trait of interest (**foreground branches**). There are several possible ways to do this:
 
-1) Provide a binary trait tree file. This should be a file in Newick format with branch lengths zero for background branches and one for foreground branches. An example is provided in *extdata/MarineTreeBinCommonNames.txt*.
+1) Provide a binary trait tree file. This should be a file in Newick format with branch lengths zero for background branches and one for foreground branches. An example is provided in *extdata/MarineTreeBinCommonNames.txt*. This tree must have the same topology as the master tree or a subset of the master tree.
 
 ```{r fig2, fig.height=9,fig.width=10, warning = FALSE, cache = TRUE}
 marineb=read.tree(paste(rerpath,"/extdata/MarineTreeBinCommonNames.txt",sep=""))
@@ -136,6 +146,8 @@ binplot1=plotTreeHighlightBranches(mb1, outgroup=noneutherians, hlspecies=which(
 ```
 
 The plot on the left shows the tree you provided, with branch lengths 0 for all background lineages and branch lengths 1 for foreground lineages. The plot on the right displays the tree with all branch lengths 1 and the foreground lineages highlighted in blue. This binary tree represents the following as foreground lineages: all terminal branches leading to extant marine species, plus the branch leading to the common ancestor of the killer whale and the dolphin.
+
+#The following should be modified to allow pruning the tree before inferring transitions (if this becomes an option in foreground2Tree)
 
 2) Generate a binary tree from a vector of foreground species using `foreground2Tree`. By modifying the `clade` argument, you can choose one of several options for how to handle the branches ancestral to the foreground species, as follows:
 
@@ -227,7 +239,7 @@ Now that we have estimates for the RERs for all genes of interest, as well as a 
 This uses the following input variables (all the options set here are also the defaults):
 
 * `min.sp`: the minimum number of species in the gene tree for that gene to be included in the analysis. The default is 10, but you may wish to modify it depending upon the number of species in your master tree.
-* `min.pos`: the minimum number of independent foreground (non-zero) lineages represented in the gene tree for that gene to be included in the analysis. The default is 2, requiring the trait to have evolved in at least two separate clades with representatives in the gene tree.
+* `min.pos`: the minimum number of independent foreground (non-zero) lineages represented in the gene tree for that gene to be included in the analysis. The default is 2, requiring at least two foreground lineages to be present in the gene tree.
 * `weighted`: whether to perform a weighted correlation where branch lengths represent weights. This can be used with the `clade=weighted` option in `foreground2Tree` to distribute phenotype weights across multiple lineages in a clade. The default is "auto", which will use weighted correlation if any branch lengths are between 0 and 1, and will use standard correlation otherwise.
 
 ```{r, warning = FALSE, cache = TRUE}
@@ -250,7 +262,7 @@ head(corMarine[order(corMarine$P),])
 ```
 
 ANO2 and BMP10 are two of the top genes.
-```{r fig4, fig.height=9, fig.width=10, warning = FALSE, cache = TRUE}
+```{r fig9, fig.height=9, fig.width=10, warning = FALSE, cache = TRUE}
 plotRers(mamRERv,"ANO2",phenv=phenvMarine) 
 plotRers(mamRERv,"BMP10",phenv=phenvMarine) 
 ```
@@ -260,7 +272,7 @@ In these RER plots, the marine lineages specified in the foreground are highligh
 In the ANO2 tree, marine lineages have high RER, leading to a positive Rho and a low p-value. In contrast, in the BMP10 tree, marine lineages have low RER. This also yields a low p-value, but with a negative Rho.
 
 To see what the overall pattern of association is across all genes in the set, we can plot a p-value histogram.
-```{r fig5, fig.height=5, fig.width=10}
+```{r fig10, fig.height=5, fig.width=10}
 hist(corMarine$P, breaks=15, xlab="Kendall P-value", 
      main="P-values for correlation between 200 genes and marine environment")
 ```
