Removed check for topology match btw trait and master trees
This commit removes the topology equality check from tree2Paths,
in order to allow the vignette to run for the binary trait tree,
which is missing a species present in the master tree. This may
still be an issue for other cases where there is topological
discordance, unless a check is present in matchNodesInject.
See issue #22.

--- a/vignettes/RERconvergeAnalysisFullWalkthrough.Rmd
+++ b/vignettes/RERconvergeAnalysisFullWalkthrough.Rmd
@@ -53,7 +53,7 @@ In R, load the RERConverge library.
 ```{r results='hide', message = FALSE, warning = FALSE, cache = TRUE}
 if (!require("RERconverge", character.only=T, quietly=T)) {
     require(devtools)
-    install_github("nclark-lab/RERconverge")
+    install_github("nclark-lab/RERconverge", ref="CleanupVignette")
 }
 library(RERconverge)
 ```
