--- a/vignettes/RERconvergeAnalysisFullWalkthrough.Rmd
+++ b/vignettes/RERconvergeAnalysisFullWalkthrough.Rmd
@@ -53,7 +53,7 @@ In R, load the RERConverge library.
 ```{r results='hide', message = FALSE, warning = FALSE, cache = TRUE}
 if (!require("RERconverge", character.only=T, quietly=T)) {
     require(devtools)
-    install_github("nclark-lab/RERconverge", ref="CleanupVignette") #change ref once branch is merged
+    install_github("nclark-lab/RERconverge") #change ref once branch is merged
 }
 library(RERconverge)
 ```
