--- a/vignettes/RERconvergeAnalysisFullWalkthrough.Rmd
+++ b/vignettes/RERconvergeAnalysisFullWalkthrough.Rmd
@@ -4,7 +4,7 @@ bibliography: RERConverge.bib
 date: "`r format(Sys.time(), '%B %d, %Y')`"
 output:
   pdf_document:
-    toc: no
+    toc: yes
   html_document:
     css: custom.css
     toc: yes
@@ -318,6 +318,9 @@ head(logAdultWeightcm)
 
 
 We must convert the trait vector to paths comparable to the paths in the RER matrix.  To do that, we can use the function 'char2Paths' as shown here:
+
+<!-- The following chunk prevents knitting, although it runs fine on its own. When knitting, it produces the following error (despite char2Paths being set to export and listed in NAMESPACE):
+Error in eval(expr, envir, enclos) : could not find function "char2Paths" Calls: <Anonymous> ... handle -> withCallingHandlers -> withVisible -> eval -> eval -->
 
 ```{r}
 charpaths=char2Paths(logAdultWeightcm, toyTrees)
